fixed problem with horizontal scroll in user-profile component for mobile view

--- a/src/app/features/user-profile/user-profile.component.scss
+++ b/src/app/features/user-profile/user-profile.component.scss
@@ -1,6 +1,7 @@
 .container {
   padding: 1rem;
   width: fit-content;
+  max-width: 100%;
   margin: auto;
   margin-top: 2rem;
   h2 {
